# AmazingPlayer

./: CMakeLists.txt  README.md  main.cpp
AmazingPlayerImpl/gstreamer/: CMakeLists.txt
AmazingPlayerImpl/gstreamer/inc/: MediaPipeline.h
AmazingPlayerImpl/gstreamer/src/: MediaPipeline.cpp
AmazingPlayerImpl/mock/inc/: gtk_type.h  mock.h
AmazingPlayerImpl/ui/: CMakeLists.txt
AmazingPlayerImpl/ui/inc/: MainWindow.h
AmazingPlayerImpl/ui/src/: MainWindow.cpp
doc/: RequirementsAnalysis.md  Specifications.md  SpecificationsCN.md  Workplanning.md
src/ui/: CMakeLists.txt
